
5.1b2 -> 5.1.0:
    - jbj: update id.po from Translation Project.
    - rse: merge OpenPKG-specific "extension-based-compression-detection" change
    - afb: disable intl/iconv for popt 1.14 under Mac OS X
    - jbj: update {nl,pl,sl,sv,vi}.po from Translation Project.

5.1b1 -> 5.1b2:
    - rse: use latest POPT 1.14 for building with "devtool standalone"
    - rse: replace obsolete AC_AIX and AC_MINIX checks with newer AC_USE_SYSTEM_EXTENSIONS to get rid of Autoconf warnings
    - rse: upgrade build environment to GNU autoconf 2.62

5.0.0 -> 5.1b1:
    - jbj: update PO files from Translation Project for rpm-5.1 inclusion.
    - jbj: permit installing 3.0.x SRPMS.
    - jbj: rpmio: fix: add rpmluaFiles to loader map.
    - jbj: fix: avoid assertion failure with entry->info.offset == 0.
    - jbj: merge "support-rpmlua-option" patch from OpenPKG.
    - jbj: merge "support-rpmpopt-option" patch from OpenPKG.
    - jbj: merge "security-sanity-check-rpmpopt-and-rpmmacros" patch from OpenPKG.
    - jbj: merge "no-extra-terminating-newline-on-eval" patch from OpenPKG.
    - jbj: merge "explicit-source-fetch-cli-option" patch from OpenPKG.
    - jbj: merge "download-source-files-from-original-location" patch from OpenPKG.
    - jbj: merge "support-external-download-command" patch from OpenPKG.
    - jbj: merge "support-srcdefattr" patch from OpenPKG.
    - jbj: fix: RPMTAG_NVRA w .src/.pubkey in error msg is bogus.
    - jbj: permit noarch sub-packages. Pattern match guaranteee next ...
    - rpm.org: Enhance error message on failed ts lock acquire (rhbz#427064).
    - jbj: fix the rpm.org memory leak.
    - rpm.org: Don't use static buffers to communicate between funcs, avoid buffer overflows.
    - rpm.org: Use more meaningful variable names than res2 and res3.
    - rpm.org: Make signature verification result not depend on rpm verbosity level, ick.
    - rse: upgraded build environment to use GNU libtool 2.2.2